[package]
name = "image_quality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "0.2.11"
haphazard = "0.1.4"
clap = { version = "4.0.12", features = ["derive"] }
nshare = { version = "0.9.0", features = ["image","ndarray"] }
ndarray = "0.15.6"
image = "0.24.4"